# PupsyRender

./: Cargo.toml  README.md  example1.gltf
example/: Duck.glb  example1.gltf
src/: engine.rs  main.rs
src/engine/: bvh.rs  camera.rs  geometry.rs  material.rs  math.rs  mesh.rs  mod.rs  octree.rs  onb.rs  profile.rs  ray.rs  render_context.rs  render_target.rs  renderer.rs  sampler.rs  scene.rs  texture.rs  transform.rs  vector3.rs
src/engine/bvh/: aabb.rs  node.rs
src/engine/geometry/: bvh.rs  mod.rs  sphere.rs  traceable.rs  triangle.rs  vertex.rs
src/engine/geometry/bvh/: aabb.rs  bin.rs  bvh.rs  node.rs
src/engine/light/: directional.rs  mod.rs
src/engine/material/: brdf.rs  diffuse.rs  diffuse_light.rs  metal.rs  mod.rs  normal.rs  pbr.rs  pbr_metalic_roughness.rs  pbr_metallic_roughness.rs  refraction.rs  uv.rs
src/engine/material/pdf/: cook_torrance_distribution.rs  cosine.rs  mix.rs  mod.rs  traceable.rs
src/engine/math/: mod.rs  ray.rs  utils.rs  vector3.rs
src/engine/octree/: octant.rs  octree.rs  query.rs
src/engine/sampler/: sampler.rs
src/engine/texture/: mod.rs  texture2d.rs
src/engine/threadpool/: threadpool.rs
