[package]
name = "pupsy_render"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.7"
rand = "0.8.5"
glam = "0.24.1"
data-url = "0.3.0"
num_cpus = "1.16.0"
workerpool = "1.2.0"

[dependencies.gltf]
version = "1.3.0"
features = ["extras", "names", "KHR_lights_punctual"]